Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignTextText.quorum
class Main
    action Main
        text v = Test()
        if v = "text"
            output "passed"
        end
    end

    action Test() returns text
        text var = "text"
        return var
    end
end