Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjTextField.quorum
class Main
    text v = text
    action Main
        Test(v)
    end

    action Test(Boolean var)
    end
end
